# brodo

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  vcpkg.json
.codex/skills/brodo-spec-driven-test-impl/: SKILL.md
.codex/skills/brodo-spec-driven-test-impl/agents/: openai.yaml
.codex/skills/brodo-spec-driven-test-impl/references/: gtest-cmake.md  spec-requirements.md  test-workflow.md
.codex/tools/: run-generate-openai-yaml.ps1  run-skill-quick-validate.ps1
.codex/tools/skill-creator-compat/: yaml.py
.github/: labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml  refactor.yml  task.yml
.github/workflows/: ci.yml
.pi/: workflow.json
.pi/skills/grill-me/: SKILL.md
.pi/skills/issue-planner/: SKILL.md
.pi/skills/pr-implementer/: SKILL.md
.pi/skills/pr-reviewer/: SKILL.md
docs/: development-environment.yaml  workflow.md
docs/decisions/: ci.md  test-framework.md
docs/human-agent/: development-environment.md  platform-window.md
docs/specs/: platform-window.yaml
include/brodo/platform/: window.h
samples/: window_sample.cpp
scripts/: setup-labels.mjs  setup-vcpkg.ps1
src/platform/: window_win32.cpp
tests/: CMakeLists.txt
tests/platform/: window_config_tests.cpp
